--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ main
                         </div>
                     </div>
                     <div class="ibe-dropdown__content ibe-departure-date__content">
-                        cal
+                        <div class="js-ibe-deparure-calendar"></div>
                     </div>
                 </div>
             </div>
