--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@ main
                         </div>
                     </div>
                     <div class="ibe-dropdown__content ibe-arrival-date__content">
-                        cal
+                        <div class="js-ibe-arrival-calendar"></div>
+                        <div class="ibe-duration-control js-ibe-duration-control"></div>
                     </div>
                 </div>
             </div>
@@ -304,6 +305,7 @@ main
 <script src="js/controls/destination.js"></script>
 <script src="js/controls/tourists.js"></script>
 <script src="js/controls/calendar.js"></script>
+<script src="js/controls/duration.js"></script>
 <script src="js/searchForm.js"></script>
 
 </body>
