--- a/index.html
+++ b/index.html
@@ -58,7 +58,21 @@ main
                         </div>
                     </div>
                     <div class="ibe-dropdown__content ibe-departure__content">
-                        departure
+                        <details class="ibe-details">
+                            <summary class="ibe-summary">
+                                Deutschland
+                            </summary>
+                            <div class="row">
+                                <div class="col-6 col-md-3 col-lg-3">
+                                    <div class="ibe-airport__group">
+                                        <label class="ibe-airport__label">
+                                            <input type="checkbox" name="qw" value="test" class="ibe-airport__checkbox" checked> Berlin Brandenburg
+                                        </label>
+                                    </div>
+                                    <div class="ibe-airport__list"></div>
+                                </div>
+                            </div>
+                        </details>
                     </div>
                 </div>
             </div>
@@ -294,6 +308,39 @@ main
         font-weight: 400;
         font-size: 16px;
     }
+
+    .row {
+        --bs-gutter-x: 1.5rem;
+        --bs-gutter-y: 0;
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: calc(-1* var(--bs-gutter-y));
+        margin-right: calc(-0.5* var(--bs-gutter-x));
+        margin-left: calc(-0.5* var(--bs-gutter-x));
+    }
+    .row > * {
+        box-sizing: border-box;
+        flex-shrink: 0;
+        width: 100%;
+        max-width: 100%;
+        padding-right: calc(var(--bs-gutter-x)* 0.5);
+        padding-left: calc(var(--bs-gutter-x)* 0.5);
+        margin-top: var(--bs-gutter-y);
+    }
+    @media (min-width: 576px) {
+        .col-sm-6 {
+            flex: 0 0 auto;
+            width: 50%;
+        }
+    }
+
+    @media (min-width: 768px) {
+        .col-md-3 {
+            flex: 0 0 auto;
+            width: 25%;
+        }
+    }
+
 </style>
 
 <link rel="stylesheet" href="css/ibe.css">
