--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="ibe__col ibe-destination js-ibe__control">
                 <div class="ibe__toggler ibe-destination__toggler js-ibe__toggler">
                     <div class="ibe__toggler-val ibe-destination__val js-ibe-destination__val">
-                        <input type="text" class="ibe__input ibe-destination__input" i18n="destination_placeholder" autocomplete="off">
+                        <input type="text" class="ibe__input ibe-destination__input" i18n-placeholder="destination_placeholder" autocomplete="off">
                     </div>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" height="20" class="ibe__toggler-icon">
                         <path d="M352 192c0-88.4-71.6-160-160-160S32 103.6 32 192c0 15.6 5.4 37 16.6 63.4c10.9 25.9 26.2 54 43.6 82.1c34.1 55.3 74.4 108.2 99.9 140c25.4-31.8 65.8-84.7 99.9-140c17.3-28.1 32.7-56.3 43.6-82.1C346.6 229 352 207.6 352 192zm32 0c0 87.4-117 243-168.3 307.2c-12.3 15.3-35.1 15.3-47.4 0C117 435 0 279.4 0 192C0 86 86 0 192 0S384 86 384 192zm-240 0a48 48 0 1 0 96 0 48 48 0 1 0 -96 0zm48 80a80 80 0 1 1 0-160 80 80 0 1 1 0 160z" />
@@ -83,7 +83,8 @@
             <!-- departure-->
             <div class="ibe__col ibe-departure js-ibe-departure js-ibe__control">
                 <div class="ibe__toggler js-ibe__toggler">
-                    <div class="ibe__toggler-val js-ibe-departure__val" i18n="departure_placeholder"></div>
+                    <div class="ibe__toggler-val js-ibe-departure__val"></div>
+                    <div class="ibe__toggler-placeholder" i18n="departure_placeholder"></div>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" height="20" class="ibe__toggler-icon">
                         <path d="M158.7 105.4c11.5-5.2 24.5-5.7 36.4-1.4L375 170c4.2 1.5 8.8 1.3 12.8-.8l88-45c15.8-8.1 33.3-12.3 51-12.3l61 0c12.7 0 21.1 13.1 15.8 24.6c-15.4 33.4-41.7 60.5-74.6 77L255.6 350.3c-2.2 1.1-4.7 1.7-7.2 1.7l-139.2 0c-4.2 0-8.3-1.7-11.3-4.7L34.1 283.5l23.7-13.6c4.4-2.5 9.8-2.8 14.4-.7l57.2 25.4c4.4 2 9.5 1.8 13.8-.4l115-58.8c5.1-2.6 8.5-7.8 8.7-13.6s-2.6-11.2-7.5-14.3L121.9 122.2l-6.6-14.6 6.6 14.6 36.9-16.8zM206.1 74c-19.7-7.2-41.5-6.4-60.6 2.3L108.6 93.1c-23.3 10.6-25.4 42.8-3.6 56.3l113.5 70.5-83 42.4L85.3 240l-6.1 13.7L85.3 240c-14-6.2-30-5.4-43.3 2.2L18.2 255.7c-18.3 10.5-21.7 35.5-6.8 50.4l63.8 63.8c9 9 21.2 14.1 33.9 14.1l139.2 0c7.5 0 14.8-1.7 21.5-5.1L543.3 242.2c39.4-19.7 70.9-52.2 89.3-92.2c15.1-32.7-8.8-70-44.8-70l-61 0c-22.8 0-45.2 5.4-65.5 15.8l-81.8 41.8L206.1 74zM16 480c-8.8 0-16 7.2-16 16s7.2 16 16 16l608 0c8.8 0 16-7.2 16-16s-7.2-16-16-16L16 480z" />
                     </svg>
@@ -107,7 +108,8 @@
             <!-- tourists-->
             <div class="ibe__col js-ibe__control">
                 <div class="ibe__toggler js-ibe__toggler">
-                    <div class="ibe__toggler-val ibe-toggler-val_selected js-ibe-tourist__val">Erw. / keine Kinder</div>
+                    <div class="ibe__toggler-val js-ibe-tourist__val">Erw. / keine Kinder</div>
+                    
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" height="20" class="ibe__toggler-icon">
                         <path d="M144 0a80 80 0 1 1 0 160A80 80 0 1 1 144 0zM512 0a80 80 0 1 1 0 160A80 80 0 1 1 512 0zM0 298.7C0 239.8 47.8 192 106.7 192l42.7 0c15.9 0 31 3.5 44.6 9.7c-1.3 7.2-1.9 14.7-1.9 22.3c0 38.2 16.8 72.5 43.3 96c-.2 0-.4 0-.7 0L21.3 320C9.6 320 0 310.4 0 298.7zM405.3 320c-.2 0-.4 0-.7 0c26.6-23.5 43.3-57.8 43.3-96c0-7.6-.7-15-1.9-22.3c13.6-6.3 28.7-9.7 44.6-9.7l42.7 0C592.2 192 640 239.8 640 298.7c0 11.8-9.6 21.3-21.3 21.3l-213.3 0zM224 224a96 96 0 1 1 192 0 96 96 0 1 1 -192 0zM128 485.3C128 411.7 187.7 352 261.3 352l117.3 0C452.3 352 512 411.7 512 485.3c0 14.7-11.9 26.7-26.7 26.7l-330.7 0c-14.7 0-26.7-11.9-26.7-26.7z" />
                     </svg>
@@ -185,7 +187,8 @@
             <!-- departure-date-->
             <div class="ibe__col ibe-departure-date js-ibe__control">
                 <div class="ibe__toggler js-ibe__toggler">
-                    <div class="ibe__toggler-val js-ibe-departure-date__val" i18n="departure_date_placeholder"></div>
+                    <div class="ibe__toggler-val js-ibe-departure-date__val"></div>
+                    <div class="ibe__toggler-placeholder" i18n="departure_date_placeholder"></div>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" height="20" class="ibe__toggler-icon">
                         <path d="M112 0c8.8 0 16 7.2 16 16l0 48 192 0 0-48c0-8.8 7.2-16 16-16s16 7.2 16 16l0 48 32 0c35.3 0 64 28.7 64 64l0 32 0 32 0 256c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 192l0-32 0-32C0 92.7 28.7 64 64 64l32 0 0-48c0-8.8 7.2-16 16-16zM416 192l-104 0 0 72 104 0 0-72zm0 104l-104 0 0 80 104 0 0-80zm0 112l-104 0 0 72 72 0c17.7 0 32-14.3 32-32l0-40zM280 376l0-80-112 0 0 80 112 0zM168 408l0 72 112 0 0-72-112 0zm-32-32l0-80L32 296l0 80 104 0zM32 408l0 40c0 17.7 14.3 32 32 32l72 0 0-72L32 408zm0-144l104 0 0-72L32 192l0 72zm136 0l112 0 0-72-112 0 0 72zM384 96L64 96c-17.7 0-32 14.3-32 32l0 32 384 0 0-32c0-17.7-14.3-32-32-32z" />
                     </svg>
@@ -209,7 +212,8 @@
             <!-- arrival-date-->
             <div class="ibe__col ibe-arrival-date js-ibe__control">
                 <div class="ibe__toggler js-ibe__toggler">
-                    <div class="ibe__toggler-val js-ibe-arrival-date__val" i18n="arrival_date_placeholder"></div>
+                    <div class="ibe__toggler-val js-ibe-arrival-date__val"></div>
+                    <div class="ibe__toggler-placeholder" i18n="arrival_date_placeholder"></div>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" height="20" class="ibe__toggler-icon">
                         <path d="M112 0c8.8 0 16 7.2 16 16l0 48 192 0 0-48c0-8.8 7.2-16 16-16s16 7.2 16 16l0 48 32 0c35.3 0 64 28.7 64 64l0 32 0 32 0 256c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 192l0-32 0-32C0 92.7 28.7 64 64 64l32 0 0-48c0-8.8 7.2-16 16-16zM416 192l-104 0 0 72 104 0 0-72zm0 104l-104 0 0 80 104 0 0-80zm0 112l-104 0 0 72 72 0c17.7 0 32-14.3 32-32l0-40zM280 376l0-80-112 0 0 80 112 0zM168 408l0 72 112 0 0-72-112 0zm-32-32l0-80L32 296l0 80 104 0zM32 408l0 40c0 17.7 14.3 32 32 32l72 0 0-72L32 408zm0-144l104 0 0-72L32 192l0 72zm136 0l112 0 0-72-112 0 0 72zM384 96L64 96c-17.7 0-32 14.3-32 32l0 32 384 0 0-32c0-17.7-14.3-32-32-32z" />
                     </svg>
