--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="ibe-dropdown__main">
+                    <div class="ibe-dropdown__main js-ibe-tourist-control">
 
                         <div class="ibe-tourists__row">
                             <div class="ibe-tourists__label">Erwachsene</div>
@@ -147,33 +147,35 @@
                         <div class="ibe-tourists__row js-ibe-childs-ages hide">
                             <div class="ibe-dropdown-header">Alter der Kinder</div>
 
-                            <div class="ibe-tourists__row js-ibe-child-age hide">
-                                <div class="ibe-tourists__label">Kind 1</div>
-                                <div class="ibe-tourists__select-wr">
-                                    <select class="ibe-tourists__select">
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                    </select>
+                            <div class="ibe__row">
+                                <div class="ibe__col-4 js-ibe-child-age hide">
+                                    <div class="ibe-tourists__row">
+                                        <div class="ibe-tourists__label">Kind 1</div>
+                                        <div class="ibe-tourists__select-wr">
+                                            <select class="ibe-tourists__select js-ibe-tourists__age-select">
+                                            </select>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
 
-                            <div class="ibe-tourists__row js-ibe-child-age hide">
-                                <div class="ibe-tourists__label">Kind 2</div>
-                                <div class="ibe-tourists__select-wr">
-                                    <select class="ibe-tourists__select">
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                    </select>
+                                <div class="ibe__col-4 js-ibe-child-age hide">
+                                    <div class="ibe-tourists__row">
+                                        <div class="ibe-tourists__label">Kind 2</div>
+                                        <div class="ibe-tourists__select-wr">
+                                            <select class="ibe-tourists__select js-ibe-tourists__age-select">
+                                            </select>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
 
-                            <div class="ibe-tourists__row js-ibe-child-age hide">
-                                <div class="ibe-tourists__label">Kind 3</div>
-                                <div class="ibe-tourists__select-wr">
-                                    <select class="ibe-tourists__select">
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                    </select>
+                                <div class="ibe__col-4 js-ibe-child-age hide">
+                                    <div class="ibe-tourists__row">
+                                        <div class="ibe-tourists__label">Kind 3</div>
+                                        <div class="ibe-tourists__select-wr">
+                                            <select class="ibe-tourists__select js-ibe-tourists__age-select">
+                                            </select>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
