--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 <link rel="stylesheet" href="css/ibe.css">
 <!-- <link rel="stylesheet" href="search.amadeus.css"> -->
 <!-- TODO: ajax-->
-<script src="data/regions.js"></script>
+<script src="data/data_de.js"></script>
 <script src="js/controls/quantity.js"></script>
 <script src="js/controls/destination.js"></script>
 <script src="js/controls/airport.js"></script>
@@ -427,6 +427,7 @@
 <script src="js/controls/calendar.js"></script>
 <script src="js/controls/duration.js"></script>
 <script src="js/searchForm.js"></script>
+<script>const _IBESearch = new IBESearch(i18n_ibe, 'de', '');</script>
 
 </body>
 </html>
